Header's position and visibility fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ header {
     position: fixed;
     top: 0px;
     left: 0px;
+    z-index: 100;
 }
 
 #logo img {
